Fix extra margin in top bar

--- a/clasificahumor/static/css/main.css
+++ b/clasificahumor/static/css/main.css
@@ -70,8 +70,7 @@ h2 {
   padding: 0;
 }
 
-/* If I use the class instead of 'li', the "display: inline;" doesn't work. */
-li {
+.answer {
   display: inline;
   margin: 0 20px 20px 20px;
 }
